--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <li><button onclick="new_game()">new game</button></li>
               </div>
             <div id="guest">
-                <h3>AWAY</h3>
+                <h3>GUEST</h3>
                 <section class="score">
                  <p id="score-guest">0</p>
                 </section>
